refactor: use List.getFirst() instead of get(0) in ShowPlanningAiService